<resources>
    <string name="app_name">Wacula</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_list">List</string>
    <string name="action_share">Share</string>
    <string name="action_credit">Credits</string>
</resources>
