<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="september.core.wacula.activity.MainActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="500"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="always" />
    <item android:id="@+id/action_home"
        android:title="@string/action_home"
        android:orderInCategory="0"
        android:icon="@drawable/ic_action_home"
        app:showAsAction="always" />
    <item android:id="@+id/action_list"
        android:title="@string/action_list"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_list"
        app:showAsAction="always" />
    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="200"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="always" />
    <item android:id="@+id/action_credit"
        android:title="@string/action_credit"
        android:orderInCategory="300"
        android:icon="@drawable/ic_action_credit"
        app:showAsAction="always" />
</menu>
